--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^12.2.0",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.469.0",
     "pinia": "^2.3.0",
+    "radix-vue": "^1.9.11",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
